# evidencia-flias

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
Demo/: manometer.py
docs/: .gitignore  katalog.tex  navrh.tex  testing.tex
flase/: asgi.py  settings.py  urls.py  wsgi.py
flase_app/: admin.py  apps.py  detection.py  forms.py  mixins.py  models.py  urls.py  views.py
flase_app/migrations/: 0001_initial.py  0002_user_role.py  0003_alter_user_role.py  0004_user_name.py  0005_remove_user_name_alter_user_role_alter_user_username.py  0006_alter_user_email_alter_user_password_alter_user_role.py  0007_alter_user_email.py  0008_alter_user_email.py  0009_alter_user_email.py  0010_alter_user_email_alter_user_password_and_more.py  0011_alter_user_options_alter_user_managers_and_more.py  0012_gas_amount_gas_note.py  0013_remove_gas_amount_alter_user_role.py  0014_alter_building_options_alter_gas_options_and_more.py  0015_cylinderlife_pressure_date.py  0016_cylinderlife_manometer_max_and_more.py  0017_cylinderlife_is_latest.py  0018_alter_gas_options_gas_purity_and_more.py  0019_alert.py
flase_app/templates/: base.html  confirm_delete_pre_plyny.html  delete_restricted.html  form_plynov.html  index.html  zoznam_plynov.html
flase_app/templates/alerts/: form.html  list.html
flase_app/templates/cylinder_life/: end.html  (+2 more)
flase_app/urls/: __init__.py
flase_app/views/: __init__.py  alerts.py  authentication.py  cylinder.py  gas.py  home.py  owner.py  places.py  registration.py  supplier.py  user.py
manometer/: ManometerV3.py
(+42 files in other folders)
