[tool.poetry]
name = "evidencia-flias"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
Django = "^4.2.6"
django-debug-toolbar = "^4.2.0"
django-widget-tweaks = "^1.5.0"
django-environ = "^0.11.2"
whitenoise = "^6.6.0"
gunicorn = "^21.2.0"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
